[FIX] web_editor: make the date clearly visible
The text color in the input is purple and not clearly visible with the dark input background.

Steps to reproduce:
-------------------
* Go to edit mode.
* Drag and drop a "countdown" block.
* Open the date picker by clicking the "Due Date" input in the options.
* Click on a date.

> Observation:

Why the fix:
------------
Make it visible

opw-4589158

closes odoo/odoo#206855

X-original-commit: 48f731ed17052e450e7f26a58a9608459f41d1ec

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -1404,6 +1404,9 @@
                 &::placeholder {
                     color: $o-we-sidebar-content-field-control-item-color;
                 }
+                &.datetimepicker-input.text-primary {
+                    color: inherit !important;
+                }
             }
             span {
                 flex: 0 0 auto;
